tests/fail/ch_nightly/missing_type.stderr
error: Missing Type for given '{}' Placeholder
 --> $DIR/missing_type.rs:2:33
  |
2 |     sscanf::scanf!("hi", "asdf{}{}asdf{bob}", usize);
  |                                 ^^

error: Missing Type for given '{bob}' Placeholder
 --> $DIR/missing_type.rs:2:39
  |
2 |     sscanf::scanf!("hi", "asdf{}{}asdf{bob}", usize);
  |                                       ^^^^^
